[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Game/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Game/game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Game/camera.gd" type="Script" id=3]
[ext_resource path="res://Scenes/GUI/GUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Images/None.png" type="Texture" id=5]
[ext_resource path="res://Scenes/GUI/HoverUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/BGShader.tres" type="Material" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="Camera"]
material = ExtResource( 7 )
texture = ExtResource( 5 )
centered = false

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="GUI" parent="." instance=ExtResource( 4 )]

[node name="HoverUI" parent="." instance=ExtResource( 6 )]
Map = NodePath("../Map")

[connection signal="began_following" from="Camera" to="GUI" method="_on_Camera_began_following"]
[connection signal="began_following" from="Camera" to="HoverUI" method="_on_Camera_began_following"]
[connection signal="map_updated" from="Map" to="HoverUI" method="_on_Map_map_updated"]
[connection signal="move_completed" from="Map" to="." method="_on_Map_move_completed"]
[connection signal="game_over" from="GUI" to="." method="_on_GUI_game_over"]
[connection signal="paused" from="GUI" to="." method="_on_GUI_paused"]
[connection signal="resumed" from="GUI" to="." method="_on_GUI_resumed"]
[connection signal="timeline_changed" from="GUI" to="." method="_on_GUI_timeline_changed"]
